# RobotProject

./: .dockerignore  Internet.py  README.md  docker-compose.yml  run.py
backend/: Dockerfile.backend
backend/robot/robot/: settings.py  urls.py
backend/robot/robotbackend/: models.py  serializers.py  views.py
backend/robot/robotbackend/migrations/: 0001_initial.py
interface/: Dockerfile.interface  README.md  build.xml
interface/src/com/christopher/robot/: RobotInterface.java
interface/src/com/christopher/robot/client/: Client.java  ClientException.java  TcpClient.java
interface/src/com/christopher/robot/logger/: LogLevel.java  Logger.java
mysql/: Dockerfile.mysql  README.md  dbSchema.sql
simulator/: CMakeLists.txt  Dockerfile.simulator  README.md  removeCmakeFiles.py
simulator/src/: CMakeLists.txt  Main.cpp  Simulator.cpp
simulator/src/message/: CMakeLists.txt  Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  MessageHeader.cpp  MessageHeader.h  MessageProcessor.cpp  MessageProcessor.h  MessageQueue.cpp  MessageQueue.h  MessageQueueInterface.h  MessageTrailer.cpp  MessageTrailer.h  MessageType.h  MoveMessage.cpp  MoveMessage.h  MoveMessageId.h  MoveMessageResponse.cpp  MoveMessageResponse.h  MoveResponseId.h  Response.cpp  Response.h  ResponseQueue.cpp  ResponseQueue.h  ResponseType.h  TestMessage.cpp  TestMessage.h  TestMessageId.h  TestMessageResponse.cpp  TestMessageResponse.h  TestResponseId.h
simulator/src/robot/: Brain.h  CMakeLists.txt  Motor.cpp  Motor.h  Robot.cpp  Robot.h
simulator/src/server/: CMakeLists.txt  Server.cpp  Server.h  TcpServer.cpp  TcpServer.h
simulator/src/utilities/: CMakeLists.txt  Exceptions.h  Logger.cpp  Logger.h  RawBuffer.cpp  RawBuffer.h  Status.h  utils.cpp  utils.h
simulator/test/src/client/: CMakeLists.txt  Client.cpp  Client.h  ClientException.h  Main.cpp
webapp/: Dockerfile.webapp  README.md  package.json
webapp/src/: index.js
webapp/src/app/: App.js  HomePage.js
webapp/src/app/backend/: backend.js
webapp/src/app/components/buttons/: ConfigButton.js  MainButtonPanel.js  PlayButton.js
webapp/src/app/components/popups/: DeleteConfirmation.js  SubmitConfirmation.js
webapp/src/app/config/: ConfigForm.js  ConfigPage.js
webapp/src/app/play/: PlayPage.js
webapp/src/app/routes/: Routes.js
webapp/src/css/: App.css  MainButtonPanel.css  OvalButton.css  index.css
webapp/src/js/components/: App.js  ErrorPage.js  HomePage.js
webapp/src/js/components/config/: ConfigPage.js
webapp/src/js/components/play/: PlayPage.js
webapp/src/js/components/utilities/: ConfigButton.js  MainButtonPanel.js  OvalButton.js  PlayButton.js  Routes.js
(+20 files in other folders)
